2009-01-27  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	* style.css:
	  Use tables like described in #536928.

	* tests/tools.sh
	  Comment on why we do the tool check like this.
  
	* tests/fail.sh:
	  Comment on test.

	* tests/gobject/docs/tester-docs.xml:
	  Fix xml a bit.

2009-01-26  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/bugs/src/tester.h:
	* tests/fail.sh:
	* tests/fail/docs/tester-docs.xml:
	* tests/fail/docs/tester-sections.txt:
	* tests/fail/src/tester.c:
	  Add public symbols from section file when doing the -undocumented.txt
	  report. Also add the special symbols for the section docs when reading
	  the section-file. Extend test suite to check for it. Fixes #568732

2009-01-26  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scan.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	  Handle inline functions in headers. Fixes #532395.

2009-01-26  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  Mention onine site for regexp testing.

	* gtkdoc-mkdb.in:
	  Small output cleanups.

	* gtkdoc-mktmpl.in:
	  Indenting and use LogWarning once more.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Recomment out debug log the accidentialy went in.

	* configure.in:
	* tests/Makefile.am:
	* tests/fail.sh:
	* tests/tools.sh.in:
	* tests/tools.sh.in (added):
	  Add a check that tests that all scripts are runnable.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-check.in:
	  No need to format a '\n' into a formatstring.

	* gtkdoc-mkdb.in:
	  Add FIXMEs for Bug 568711.

	* gtkdoc-mkhtml.in:
	  Add a comment.

	* configure.in:
	* tests/Makefile.am:
	* tests/fail.sh:
	* tests/fail/Makefile.am:
	* tests/fail/docs/Makefile.am:
	* tests/fail/docs/tester-docs.xml:
	* tests/fail/docs/tester-sections.txt:
	* tests/fail/src/Makefile.am:
	* tests/fail/src/tester.c:
	* tests/fail/src/tester.h:
	  Add a test suite for failure checks.
