@@ -1,3 +1,9 @@
+2009-01-28  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-fixxref.in:
+	* tests/gobject/examples/gobject.c:
+	  Expand urls in comments of examples.
+
 2009-01-27  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-fixxref.in:
